--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,16 @@
 
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
   background: white;
+  color: $dark-grey;
+  line-height: 1.6;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
 }
@@ -21,6 +27,4 @@ button:disabled {
   font-weight: bold;
 }
 
-*, *:before, *:after {
-  box-sizing: border-box;
-}
+
