--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,15 @@
+//Colours
 
+$dark-grey: #333;
+$medium-grey: #666;
+$light-grey: #f7f7f7;
+$off-white: #eff;
+$medium-blue: #3496d3;
+$dark-blue: #1e2937;
+
+//Font Sizes
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 //Spacing
 $s-size: 1.2rem;
@@ -7,3 +18,4 @@ $l-size: 3.2rem;
 $xl-size: 4.8rem;
 
 $desktop-breakpoint: 45rem;
+
