--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,17 @@
 @import './base/settings';
 @import './base/base';
 
+@import './components/box-layout';
+@import './components/button';
+@import './components/container';
+@import './components/header';
+@import './components/inputs';
+@import './components/input-group';
+@import './components/page-header';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
+@import './components/loader';
+
 
 
