Add fFooter and About components

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -16,3 +16,9 @@
     margin: 0;
   }
 }
+
+.header__data-warning {
+  text-align: center;
+  background-color: rgb(193, 81, 81);
+  color: #fff;
+}
