--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@
 @import './components/visibility';
 @import './components/list';
 @import './components/loader';
+@import './components/footer';
 
 
 
